# QueryPilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
fetched_data/text_docs/: Artifical_intellegence.txt  Deep_learning.txt  Hugging_face.txt  Keras.txt  ML_algo.txt  Machine_learning.txt  Pandas.txt  Python.txt  Pytorch.txt  TensorFlow.txt  tavily_results_132c61ca-8ada-42c4-bba2-0f6582c95e38.txt  tavily_results_25bf63fe-8e65-42a9-b4f4-36d04ad8ddd7.txt
server/: app.py  backend.py
tests/: test_backend.py  test_embedding_manager.py  test_vector_db.py
work_space/: __init__.py  agent.py  data_ingestion.py  embedding_manager.py  logger.py  retriever.py  vector_db.py
